--- a/package.json
+++ b/package.json
@@ -5,18 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node db/seeds.sql",
-    "start": "node server",
-    "schema": "node db/schema.sql"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.1",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.9.2",
-    "seed": "^0.4.4",
-    "start": "^5.1.0"
+    "mysql2": "^3.9.2"
   }
 }
